# zip-archive

./: .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  Main.hs  README.markdown  Setup.hs  Setup.lhs  Tests.hs  Zip.hs  appveyor.yml  changelog  stack.yaml  zip-archive.cabal
.github/workflows/: ci.yml
Codec/Archive/: Zip.hs
src/Codec/Archive/: Zip.hs
tests/: test-zip-archive.hs
tests/test_dir_with_symlinks/: symlink_to_file_1
