Name:                zip-archive
Version:             0.1.2
Cabal-version:       >= 1.2
Build-type:          Simple
Synopsis:            Library for creating and modifying zip archives.
Description:         The zip-archive library provides functions for creating, modifying,
                     and extracting files from zip archives.
Category:            Codec
License:             BSD3
License-file:        LICENSE
Homepage:            http://github.com/jgm/zip-archive
Author:              John MacFarlane
Maintainer:          jgm@berkeley.edu
Build-Depends:       base
Extra-Source-Files:  Tests.hs, COPYING

flag splitBase
  Description:       Choose the new, smaller, split-up base package.
  Default:           True
flag executable
  Description:       Build the Zip executable.
  Default:           False
flag directory11
  Description:       Use version 1.1.x or earlier of the directory package
  Default:           False

Library 
  if flag(splitBase)
    Build-depends:   base >= 3 && < 5, pretty, containers
  else
    Build-depends:   base < 3
  if flag(directory11)
    Build-depends:   directory < 1.2
    cpp-options:     -D_DIRECTORY_1_1
  else
    Build-depends:   directory >= 1.2, time
  Build-depends:     binary, zlib, filepath, bytestring >= 0.9.0, array, mtl, utf8-string >= 0.3.1, old-time, digest >= 0.0.0.1
  Exposed-modules:   Codec.Archive.Zip
  Hs-Source-Dirs:    .
  Ghc-Options:       -Wall
  Extensions:        CPP
  if os(windows)
    cpp-options:     -D_WINDOWS
  else
    Build-depends:   unix

Executable Zip
  if flag(executable)
    Buildable:       True
  else
    Buildable:       False
  Main-is:           Zip.hs
  Ghc-Options:       -Wall
